# opensearch-study

./: compose.yml  hello.py  main.py  pyproject.toml  search_cli.py
