[project]
name = "opensearch-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "datasets>=3.2.0",
    "opensearch-py>=2.8.0",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "transformers>=4.47.1",
]
